# vcpkg

./: .gitignore  README.md  git-pull-original.bat  git-push-and-tags.bat  git-push-tags.bat  git_reset.bat  install-package.bat  install-packages-for-tutorials.bat  install-packages-for-tutorials2.bat  integrate-install-project-level.bat  integrate-install-project.txt  integrate-install-user.bat  integrate-remove.bat  list-all-available.bat  list-installed.bat  upgrade-packages.bat
vs-tutorials/: .gitignore  vs-tutorials.sln
vs-tutorials/boost-asio/: boost-asio.cpp  boost-asio.sln  boost-asio.vcxproj  boost-asio.vcxproj.filters  nuget.config
vs-tutorials/boost-lambda/: boost-lambda.cpp  boost-lambda.sln  boost-lambda.vcxproj  boost-lambda.vcxproj.filters
vs-tutorials/boost-lamda/: boost-lamda.cpp  boost-lamda.sln  boost-lamda.vcxproj  boost-lamda.vcxproj.filters
vs-tutorials/ffmpeg/: ffmpeg.cpp  ffmpeg.sln  ffmpeg.vcxproj  ffmpeg.vcxproj.filters
vs-tutorials/gtest/: README.md  gtest.cpp  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.cpp  packages.config  sample1.cpp  sample1_unittest.cpp
vs-tutorials/nana-cmake/: CMakeLists.txt  generate-vs2017-sln.bat  generate-vs2019-sln.bat  gui.cpp
vs-tutorials/opencv4/: opencv4.cpp  opencv4.sln  opencv4.vcxproj  opencv4.vcxproj.filters  packages.config
vs-tutorials/yaml-cpp/: yaml-cpp.cpp  yaml-cpp.sln  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
vs-tutorials/zeromq/: zeromq.cpp  zeromq.sln  zeromq.vcxproj  zeromq.vcxproj.filters  zeromq2.cpp  zhelpers.h
